20020423
 - (djm) Trim ChangeLog to include only post-3.1 changes
 - (djm) Update RPM spec file versions
 - (djm) Redhat spec enables KrbV by default
 - (djm) Applied OpenSC smartcard updates from Markus & 
   Antti Tapaninen <aet@cc.hut.fi>
 - (djm) Define BROKEN_REALPATH for AIX, patch from 
   Antti Tapaninen <aet@cc.hut.fi>
 - (djm) Bug #222: Fix tests for getaddrinfo on OSF/1. Spotted by
   Robert Urban <urban@spielwiese.de>
 - (djm) Make privsep work with PAM (still experimental)
 - (djm) OpenBSD CVS Sync
   - deraadt@cvs.openbsd.org 2002/04/20 09:02:03
     [servconf.c]
     No, afs requires explicit enabling
   - markus@cvs.openbsd.org 2002/04/20 09:14:58
     [bufaux.c bufaux.h]
     add buffer_{get,put}_short
   - markus@cvs.openbsd.org 2002/04/20 09:17:19
     [radix.c]
     rewrite using the buffer_* API, fixes overflow; ok deraadt@
   - stevesk@cvs.openbsd.org 2002/04/21 16:19:27
     [sshd.8 sshd_config]
     document default AFSTokenPassing no; ok deraadt@
   - stevesk@cvs.openbsd.org 2002/04/21 16:25:06
     [sshconnect1.c]
     spelling in error message; ok markus@
   - markus@cvs.openbsd.org 2002/04/22 06:15:47
     [radix.c]
     fix check for overflow
   - markus@cvs.openbsd.org 2002/04/22 16:16:53
     [servconf.c sshd.8 sshd_config]
     do not auto-enable KerberosAuthentication; ok djm@, provos@, deraadt@
   - markus@cvs.openbsd.org 2002/04/22 21:04:52
     [channels.c clientloop.c clientloop.h ssh.c]
     request reply (success/failure) for -R style fwd in protocol v2,
     depends on ordered replies.
     fixes http://bugzilla.mindrot.org/show_bug.cgi?id=215; ok provos@

20020421
 - (tim) [entropy.c.] Portability fix for SCO Unix 3.2v4.x (SCO OSR 3.0).
   entropy.c needs seteuid(getuid()) for the setuid(original_uid) to succeed.
   Patch by gert@greenie.muc.de. This fixes one part of Bug 208

20020418
 - (djm) Avoid SIGCHLD breakage when run from rsync. Fix from 
   Sturle Sunde <sturle.sunde@usit.uio.no>

20020417