@@ -6,6 +6,8 @@
    Antti Tapaninen <aet@cc.hut.fi>
  - (djm) Define BROKEN_REALPATH for AIX, patch from 
    Antti Tapaninen <aet@cc.hut.fi>
+ - (djm) Bug #213: Simplify CMSG_ALIGN macros to avoid symbol clashes. 
+   Reported by Doug Manton <dmanton@emea.att.com>
  - (djm) Bug #222: Fix tests for getaddrinfo on OSF/1. Spotted by
    Robert Urban <urban@spielwiese.de>
  - (djm) Make privsep work with PAM (still experimental)
@@ -480,4 +482,4 @@
  - (stevesk) entropy.c: typo in debug message
  - (djm) ssh-keygen -i needs seeded RNG; report from markus@
 
-$Id: ChangeLog,v 1.2074 2002/04/23 12:52:45 djm Exp $
+$Id: ChangeLog,v 1.2075 2002/04/23 12:59:51 djm Exp $
